# Simple-BlockChain

./: Cargo.toml  README.md  accounts.json  blockchain.json  docker-compose.yml  dockerfile
src/: main.rs
src/cli/: blockchain_cli.rs  mod.rs
src/core/: blockchain.rs  mod.rs
src/models/: block.rs  mod.rs  transaction.rs
