[package]
name = "BlockChain"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
# Important: Pin to exact versions to avoid dependency conflicts
rand = "0.7.3"
rand_core = "0.5.1"
ed25519-dalek = "1.0.1"
tokio = { version = "1", features = ["full"] }